tests/rosetta/transpiler/FS/babylonian-spiral.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/babylonian-spiral.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Babylonian-spiral' based on the file name 'babylonian-spiral.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/babylonian-spiral.fs(32,18): error FS0001: This expression was expected to have type
    Map<string,int> array    
but here has type
    Map<'a,'b>    

/workspace/mochi/tests/rosetta/transpiler/FS/babylonian-spiral.fs(33,18): error FS0001: This expression was expected to have type
    Map<string,int> array    
but here has type
    Map<'a,'b>    

/workspace/mochi/tests/rosetta/transpiler/FS/babylonian-spiral.fs(102,24): error FS0001: The type 'obj' does not support a conversion to the type 'int'
